--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,10 @@ src/
 env/db.env
 env/magento.env
 env/pwa.env
-modules/
-modules/readme.txt
-notes
+web/certs/*
+secrets
 *.zip
-nginx.crt
 web/www/test.php
 .vscode
 bin/*
 !bin/init
-web/certs/*
