--- a/web/www/conf/default.deployed.conf
+++ b/web/www/conf/default.deployed.conf
@@ -9,18 +9,26 @@ server {
   return 301 https://$host$request_uri;
 }
 
+map $http_host $CERTBASE {
+    *.merlu.app demo_merlu_app;
+    magento2.test nginx;
+    default nginx;
+}
 
+map $http_host $MAGE_RUN_CODE {
+    default '';
+    *.merlu.app demo;
+}
 
 server {
 
   listen [::]:8443 ssl http2 ipv6only=on;
   listen 8443 ssl http2;
-  listen 443 ssl http2;
-  set $MAGE_ROOT /var/www/html;
-  ssl_certificate /etc/nginx/certs/nginx.crt;
-  ssl_certificate_key /etc/nginx/certs/nginx.key;
 
   set $MAGE_ROOT /var/www/html;
+  set $MAGE_RUN_TYPE website;
+  ssl_certificate /etc/nginx/certs/$CERTBASE.crt;
+  ssl_certificate_key /etc/nginx/certs/$CERTBASE.key;
 
   fastcgi_buffer_size 64k;
   fastcgi_buffers 8 128k;
@@ -28,3 +36,4 @@ server {
   include /var/www/html/nginx[.]conf;
 }
 
+#docker cp ./web/www/conf/default.deployed.conf "$(docker ps -f name=app -f label=com.docker.compose.project=${PWD##*/} --format '{{.Names}}')":/etc/nginx/conf.d/default.conf
